STB-3375 - Linter checks and test fixes