@@ -5,6 +5,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 import jakarta.servlet.http.HttpSession;
 import jakarta.validation.Valid;
@@ -27,7 +28,6 @@ import org.springframework.web.server.ResponseStatusException;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import uk.gov.justice.laa.portal.landingpage.constants.ModelAttributes;
-import uk.gov.justice.laa.portal.landingpage.dto.AdminAppDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AppDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AppRoleAdminDto;
 import uk.gov.justice.laa.portal.landingpage.dto.AppRoleDto;
@@ -63,16 +63,7 @@ import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFro
 @PreAuthorize("@accessControlService.userHasAuthzRole(authentication, T(uk.gov.justice.laa.portal.landingpage.entity.AuthzRole).SILAS_ADMINISTRATION.roleName)")
 public class AdminController {
 
-    private static final String S_APP_DETAILS_FORM = "appDetailsForm";
-    private static final String S_APP_DETAILS_FORM_MODEL = "appDetailsFormModel";
-    private static final String S_APP_ID = "appId";
-    private static final String S_APPS_ORDER_FORM = "appsOrderForm";
-    private static final String S_APP_ROLE_DETAILS_FORM = "appRoleDetailsForm";
-    private static final String S_APP_ROLE_DETAILS_FORM_MODEL = "appRoleDetailsFormModel";
-    private static final String S_APP_FILTER = "appFilter";
-    private static final String S_ROLE_ID = "roleId";
-    private static final String S_APP_ROLES_ORDER_FORM = "appRolesOrderForm";
-
+    private static final String SILAS_ADMINISTRATION_TITLE = "SiLAS Administration";
     private static final Set<String> VALID_TABS = Set.of("admin-apps", "apps", "roles");
 
     private final LoginService loginService;
@@ -92,63 +83,49 @@ public class AdminController {
             @RequestParam(required = false) String appFilter,
             Model model, HttpSession session) {
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
         model.addAttribute("activeTab", tab);
 
         // Clear any session details from older operations (do not store Model in session)
-        session.removeAttribute(S_APP_DETAILS_FORM);
-        session.removeAttribute(S_APP_DETAILS_FORM_MODEL);
-        session.removeAttribute(S_APP_ID);
-        session.removeAttribute(S_APPS_ORDER_FORM);
-        session.removeAttribute(S_APP_ROLE_DETAILS_FORM);
-        session.removeAttribute(S_APP_ROLE_DETAILS_FORM_MODEL);
+        clearSessionAttributes(session);
 
         // Load all admin apps data for admin-apps tab
-        List<AdminAppDto> adminApps = adminService.getAllAdminApps();
-        model.addAttribute("adminApps", adminApps);
+        model.addAttribute("adminApps", adminService.getAllAdminApps());
 
         // Load all apps data for apps tab
         List<AppDto> apps = appService.getAllLaaApps();
         model.addAttribute("apps", apps);
 
-        List<AppRoleAdminDto> roles;
+        appFilter = Optional.ofNullable(appFilter)
+                .or(() -> getObjectFromHttpSession(session, "appFilter", String.class))
+                .orElse(null);
 
-        if (appFilter == null) {
-            appFilter = getObjectFromHttpSession(session, S_APP_FILTER, String.class).orElse(null);
-        }
-
-        if (appFilter != null && !appFilter.isEmpty()) {
-            roles = appRoleService.getLaaAppRolesByAppName(appFilter);
-        } else {
-            roles = appRoleService.getAllLaaAppRoles();
-        }
+        List<AppRoleAdminDto> roles = StringUtils.hasText(appFilter)
+                ? appRoleService.getLaaAppRolesByAppName(appFilter)
+                : appRoleService.getAllLaaAppRoles();
 
         model.addAttribute("roles", roles);
         model.addAttribute("appFilter", appFilter);
         session.setAttribute("appFilter", appFilter);
 
         // Get distinct app names for filter dropdown
-        List<String> appNames = apps.stream()
+        model.addAttribute("appNames", apps.stream()
                 .map(AppDto::getName)
                 .distinct()
                 .sorted()
-                .toList();
-        model.addAttribute("appNames", appNames);
+                .collect(Collectors.toList()));
 
         return "silas-administration/administration";
     }
 
     @GetMapping("/silas-administration/app/{appId}")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
-    public String editAppDetailsGet(@PathVariable String appId,
-                                    Model model,
-                                    HttpSession session) {
+    public String editAppDetailsGet(@PathVariable String appId, Model model, HttpSession session) {
         AppDto appDto = findAppDtoOrThrow(appId);
         model.addAttribute("app", appDto);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
-        model.addAttribute(ModelAttributes.PAGE_SUMMARY, "Legal Aid Services");
-        AppDetailsForm appDetailsForm = (AppDetailsForm) session.getAttribute(S_APP_DETAILS_FORM);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
+        AppDetailsForm appDetailsForm = (AppDetailsForm) session.getAttribute("appDetailsForm");
 
         if (appDetailsForm == null) {
             appDetailsForm = AppDetailsForm.builder()
@@ -159,29 +136,24 @@ public class AdminController {
         }
 
         model.addAttribute("appDetailsForm", appDetailsForm);
-        session.setAttribute(S_APP_DETAILS_FORM, appDetailsForm);
+        session.setAttribute("appDetailsForm", appDetailsForm);
         return "silas-administration/edit-app-details";
     }
 
     @PostMapping("/silas-administration/app/{appId}")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
-    public String editAppDetailsPost(@PathVariable String appId,
-                                     @Valid AppDetailsForm appDetailsForm,
-                                     BindingResult result,
-                                     Model model,
-                                     HttpSession session) {
+    public String editAppDetailsPost(@PathVariable String appId, @Valid AppDetailsForm appDetailsForm,
+                                     BindingResult result, Model model, HttpSession session) {
         if (result.hasErrors()) {
-            String errorMessage = buildErrorString(result);
-            AppDto appDto = findAppDtoOrThrow(appId);
-            model.addAttribute("app", appDto);
-            model.addAttribute("errorMessage", errorMessage);
+            model.addAttribute("app", findAppDtoOrThrow(appId));
+            model.addAttribute("errorMessage", buildErrorString(result));
             return "silas-administration/edit-app-details";
         }
 
-        session.setAttribute(S_APP_ID, appId);
-        session.setAttribute(S_APP_DETAILS_FORM, appDetailsForm);
+        session.setAttribute("appId", appId);
+        session.setAttribute("appDetailsForm", appDetailsForm);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return String.format("redirect:/admin/silas-administration/app/%s/check-answers", appId);
     }
@@ -191,9 +163,9 @@ public class AdminController {
     public String confirmAppDetailsGet(@PathVariable String appId,
                                        Model model,
                                        HttpSession session) {
-        String appIdFromSession = getObjectFromHttpSession(session, S_APP_ID, String.class)
+        String appIdFromSession = getObjectFromHttpSession(session, "appId", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App ID not found in session"));
-        AppDetailsForm appDetailsForm = getObjectFromHttpSession(session, S_APP_DETAILS_FORM, AppDetailsForm.class)
+        AppDetailsForm appDetailsForm = getObjectFromHttpSession(session, "appDetailsForm", AppDetailsForm.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App details not found in session"));
 
         if (!appId.equals(appIdFromSession)) {
@@ -205,7 +177,7 @@ public class AdminController {
         model.addAttribute("app", appDto);
         model.addAttribute("appDetailsForm", appDetailsForm);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return "silas-administration/edit-app-details-check-answers";
     }
@@ -216,9 +188,9 @@ public class AdminController {
                                         Authentication authentication,
                                         Model model,
                                         HttpSession session) {
-        String appIdFromSession = getObjectFromHttpSession(session, S_APP_ID, String.class)
+        String appIdFromSession = getObjectFromHttpSession(session, "appId", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App ID not found in session"));
-        AppDetailsForm appDetailsForm = getObjectFromHttpSession(session, S_APP_DETAILS_FORM, AppDetailsForm.class)
+        AppDetailsForm appDetailsForm = getObjectFromHttpSession(session, "appDetailsForm", AppDetailsForm.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App details not found in session"));
 
         if (!appId.equals(appIdFromSession)) {
@@ -240,11 +212,11 @@ public class AdminController {
         eventService.logEvent(updateAppDetailsAuditEvent);
 
         model.addAttribute("app", appDto);
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
-        session.removeAttribute(S_APP_DETAILS_FORM);
-        session.removeAttribute(S_APP_DETAILS_FORM_MODEL);
-        session.removeAttribute(S_APP_ID);
+        session.removeAttribute("appDetailsForm");
+        session.removeAttribute("appDetailsFormModel");
+        session.removeAttribute("appId");
 
         return "silas-administration/edit-app-details-confirmation";
     }
@@ -253,7 +225,7 @@ public class AdminController {
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String editAppOrderGet(Model model,
                                   HttpSession session) {
-        AppsOrderForm appsOrderForm = getObjectFromHttpSession(session, S_APPS_ORDER_FORM, AppsOrderForm.class).orElse(null);
+        AppsOrderForm appsOrderForm = getObjectFromHttpSession(session, "appsOrderForm", AppsOrderForm.class).orElse(null);
         if (appsOrderForm == null) {
             List<AppDto> allLaaApps = appService.getAllLaaApps();
             List<AppsOrderForm.AppOrderDetailsForm> appOrderDetailsForm = allLaaApps.stream()
@@ -263,7 +235,7 @@ public class AdminController {
         }
         model.addAttribute("appsOrderForm", appsOrderForm);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return "silas-administration/edit-apps-order";
     }
@@ -281,10 +253,10 @@ public class AdminController {
         }
 
         appsOrderForm.getApps().sort(Comparator.comparingInt(AppsOrderForm.AppOrderDetailsForm::getOrdinal));
-        session.setAttribute(S_APPS_ORDER_FORM, appsOrderForm);
+        session.setAttribute("appsOrderForm", appsOrderForm);
         model.addAttribute("appsOrderList", appsOrderForm.getApps());
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return "silas-administration/edit-apps-order-check-answers";
     }
@@ -293,7 +265,7 @@ public class AdminController {
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String confirmEditAppOrderPost(Authentication authentication, Model model,
                                           HttpSession session) {
-        AppsOrderForm appsOrderForm = getObjectFromHttpSession(session, S_APPS_ORDER_FORM, AppsOrderForm.class)
+        AppsOrderForm appsOrderForm = getObjectFromHttpSession(session, "appsOrderForm", AppsOrderForm.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App order details not found in session"));
         CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
 
@@ -304,8 +276,8 @@ public class AdminController {
                 currentUserProfile.getId());
         eventService.logEvent(updateAppOrdinalAuditEvent);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
-        session.removeAttribute(S_APPS_ORDER_FORM);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
+        session.removeAttribute("appsOrderForm");
 
         return "silas-administration/edit-apps-order-confirmation";
     }
@@ -313,14 +285,13 @@ public class AdminController {
     @GetMapping("/silas-administration/role/{roleId}")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String editAppRoleDetailsGet(@PathVariable String roleId,
-                                    Model model,
-                                    HttpSession session) {
+                                        Model model,
+                                        HttpSession session) {
         AppRoleDto appRoleDto = findAppRoleDtoOrThrow(roleId);
         model.addAttribute("appRole", appRoleDto);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
-        model.addAttribute(ModelAttributes.PAGE_SUMMARY, "Legal Aid Services");
-        AppRoleDetailsForm appRoleDetailsForm = (AppRoleDetailsForm) session.getAttribute(S_APP_ROLE_DETAILS_FORM);
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
+        AppRoleDetailsForm appRoleDetailsForm = (AppRoleDetailsForm) session.getAttribute("appRoleDetailsForm");
 
         if (appRoleDetailsForm == null) {
             appRoleDetailsForm = AppRoleDetailsForm.builder()
@@ -331,7 +302,7 @@ public class AdminController {
         }
 
         model.addAttribute("appRoleDetailsForm", appRoleDetailsForm);
-        session.setAttribute(S_APP_ROLE_DETAILS_FORM, appRoleDetailsForm);
+        session.setAttribute("appRoleDetailsForm", appRoleDetailsForm);
 
         return "silas-administration/edit-role-details";
     }
@@ -339,22 +310,20 @@ public class AdminController {
     @PostMapping("/silas-administration/role/{roleId}")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String editAppRoleDetailsPost(@PathVariable String roleId,
-                                     @Valid AppRoleDetailsForm appRoleDetailsForm,
-                                     BindingResult result,
-                                     Model model,
-                                     HttpSession session) {
+                                         @Valid AppRoleDetailsForm appRoleDetailsForm,
+                                         BindingResult result,
+                                         Model model,
+                                         HttpSession session) {
         if (result.hasErrors()) {
-            String errorMessage = buildErrorString(result);
-            AppRoleDto appRoleDto = findAppRoleDtoOrThrow(roleId);
-            model.addAttribute("appRole", appRoleDto);
-            model.addAttribute("errorMessage", errorMessage);
+            model.addAttribute("appRole", findAppRoleDtoOrThrow(roleId));
+            model.addAttribute("errorMessage", buildErrorString(result));
             return "silas-administration/edit-role-details";
         }
 
-        session.setAttribute(S_ROLE_ID, roleId);
-        session.setAttribute(S_APP_ROLE_DETAILS_FORM, appRoleDetailsForm);
+        session.setAttribute("roleId", roleId);
+        session.setAttribute("appRoleDetailsForm", appRoleDetailsForm);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return String.format("redirect:/admin/silas-administration/role/%s/check-answers", roleId);
     }
@@ -362,11 +331,11 @@ public class AdminController {
     @GetMapping("/silas-administration/role/{roleId}/check-answers")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String confirmAppRoleDetailsGet(@PathVariable String roleId,
-                                       Model model,
-                                       HttpSession session) {
-        String roleIdFromSession = getObjectFromHttpSession(session, S_ROLE_ID, String.class)
+                                           Model model,
+                                           HttpSession session) {
+        String roleIdFromSession = getObjectFromHttpSession(session, "roleId", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role ID not found in session"));
-        AppRoleDetailsForm roleDetailsForm = getObjectFromHttpSession(session, S_APP_ROLE_DETAILS_FORM, AppRoleDetailsForm.class)
+        AppRoleDetailsForm roleDetailsForm = getObjectFromHttpSession(session, "appRoleDetailsForm", AppRoleDetailsForm.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App role details not found in session"));
 
         if (!roleId.equals(roleIdFromSession)) {
@@ -378,7 +347,7 @@ public class AdminController {
         model.addAttribute("appRole", roleDto);
         model.addAttribute("appRoleDetailsForm", roleDetailsForm);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return "silas-administration/edit-role-details-check-answers";
     }
@@ -386,12 +355,12 @@ public class AdminController {
     @PostMapping("/silas-administration/role/{roleId}/check-answers")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String confirmAppRoleDetailsPost(@PathVariable String roleId,
-                                        Authentication authentication,
-                                        Model model,
-                                        HttpSession session) {
-        String roleIdFromSession = getObjectFromHttpSession(session, S_ROLE_ID, String.class)
+                                            Authentication authentication,
+                                            Model model,
+                                            HttpSession session) {
+        String roleIdFromSession = getObjectFromHttpSession(session, "roleId", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App Role ID not found in session"));
-        AppRoleDetailsForm roleDetailsForm = getObjectFromHttpSession(session, S_APP_ROLE_DETAILS_FORM, AppRoleDetailsForm.class)
+        AppRoleDetailsForm roleDetailsForm = getObjectFromHttpSession(session, "appRoleDetailsForm", AppRoleDetailsForm.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App role details not found in session"));
 
         if (!roleId.equals(roleIdFromSession)) {
@@ -415,11 +384,11 @@ public class AdminController {
         eventService.logEvent(updateAppRoleDetailsAuditEvent);
 
         model.addAttribute("appRole", roleDto);
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
-        session.removeAttribute(S_APP_ROLE_DETAILS_FORM);
-        session.removeAttribute(S_APP_ROLE_DETAILS_FORM_MODEL);
-        session.removeAttribute(S_ROLE_ID);
+        session.removeAttribute("appRoleDetailsForm");
+        session.removeAttribute("appRoleDetailsFormModel");
+        session.removeAttribute("roleId");
 
         return "silas-administration/edit-role-details-confirmation";
     }
@@ -427,16 +396,16 @@ public class AdminController {
     @GetMapping("/silas-administration/roles/reorder")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String editAppRolesOrderGet(Model model,
-                                  RedirectAttributes redirectAttributes,
-                                  HttpSession session) {
-        Optional<String> appName = getObjectFromHttpSession(session, S_APP_FILTER, String.class);
+                                       RedirectAttributes redirectAttributes,
+                                       HttpSession session) {
+        Optional<String> appName = getObjectFromHttpSession(session, "appFilter", String.class);
 
         if (appName.isEmpty() || !StringUtils.hasText(appName.get())) {
             redirectAttributes.addFlashAttribute("appRolesErrorMessage", "Please select an application to reorder its roles");
             return "redirect:/admin/silas-administration#roles";
         }
 
-        AppRolesOrderForm appRolesOrderForm = getObjectFromHttpSession(session, S_APP_ROLES_ORDER_FORM, AppRolesOrderForm.class).orElse(null);
+        AppRolesOrderForm appRolesOrderForm = getObjectFromHttpSession(session, "appRolesOrderForm", AppRolesOrderForm.class).orElse(null);
         if (appRolesOrderForm == null) {
             List<AppRoleAdminDto> appRoles = appRoleService.getLaaAppRolesByAppName(appName.get());
             List<AppRolesOrderForm.AppRolesOrderDetailsForm> appRoleOrderDetailsForm = appRoles.stream()
@@ -448,7 +417,7 @@ public class AdminController {
         model.addAttribute("appName", appName.get());
         model.addAttribute("appRolesOrderForm", appRolesOrderForm);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return "silas-administration/edit-app-roles-order";
     }
@@ -456,10 +425,10 @@ public class AdminController {
     @PostMapping("/silas-administration/roles/reorder")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String editAppRolesOrderPost(@Valid AppRolesOrderForm appRolesOrderForm,
-                                   BindingResult result,
-                                   Model model,
-                                   HttpSession session) {
-        String appName = getObjectFromHttpSession(session, S_APP_FILTER, String.class)
+                                        BindingResult result,
+                                        Model model,
+                                        HttpSession session) {
+        String appName = getObjectFromHttpSession(session, "appFilter", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App not selected for role ordering"));
         model.addAttribute("appName", appName);
 
@@ -470,10 +439,10 @@ public class AdminController {
         }
 
         appRolesOrderForm.getAppRoles().sort(Comparator.comparingInt(AppRolesOrderForm.AppRolesOrderDetailsForm::getOrdinal));
-        session.setAttribute(S_APP_ROLES_ORDER_FORM, appRolesOrderForm);
+        session.setAttribute("appRolesOrderForm", appRolesOrderForm);
         model.addAttribute("appRolesOrderList", appRolesOrderForm.getAppRoles());
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return "silas-administration/edit-app-roles-order-check-answers";
     }
@@ -481,10 +450,10 @@ public class AdminController {
     @PostMapping("/silas-administration/roles/reorder/check-answers")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String confirmEditAppRolesOrderPost(Authentication authentication, Model model,
-                                          HttpSession session) {
-        AppRolesOrderForm appRolesOrderForm = getObjectFromHttpSession(session, S_APP_ROLES_ORDER_FORM, AppRolesOrderForm.class)
+                                               HttpSession session) {
+        AppRolesOrderForm appRolesOrderForm = getObjectFromHttpSession(session, "appRolesOrderForm", AppRolesOrderForm.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App role order details not found in session"));
-        String appName = getObjectFromHttpSession(session, S_APP_FILTER, String.class)
+        String appName = getObjectFromHttpSession(session, "appFilter", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App name not found in session"));
         CurrentUserDto currentUserDto = loginService.getCurrentUser(authentication);
 
@@ -495,11 +464,11 @@ public class AdminController {
                 userProfile.getId(), appName, appName);
         eventService.logEvent(updateAppOrdinalAuditEvent);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
         // remove only relevant role-order/session attributes
-        session.removeAttribute(S_APP_FILTER);
-        session.removeAttribute(S_ROLE_ID);
-        session.removeAttribute(S_APP_ROLES_ORDER_FORM);
+        session.removeAttribute("appFilter");
+        session.removeAttribute("roleId");
+        session.removeAttribute("appRolesOrderForm");
 
         return "silas-administration/edit-app-roles-order-confirmation";
     }
@@ -509,22 +478,22 @@ public class AdminController {
     public String deleteAppRoleGet(Model model,
                                    RedirectAttributes redirectAttributes,
                                    HttpSession session) {
-        Optional<String> appNameOptional = getObjectFromHttpSession(session, S_APP_FILTER, String.class);
+        Optional<String> appNameOptional = getObjectFromHttpSession(session, "appFilter", String.class);
 
         if (appNameOptional.isEmpty() || !StringUtils.hasText(appNameOptional.get())) {
-            redirectAttributes.addFlashAttribute("appRolesErrorMessage", "Please select an application to reorder its roles");
+            redirectAttributes.addFlashAttribute("appRolesErrorMessage", "Please select an application to delete its roles");
             return "redirect:/admin/silas-administration#roles";
         }
 
         String appName = appNameOptional.get();
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         List<AppRoleAdminDto> roles = appRoleService.getLaaAppRolesByAppName(appName);
         model.addAttribute("appName", appName);
         model.addAttribute("roles", roles);
 
-        session.setAttribute(S_APP_FILTER, appName);
+        session.setAttribute("appFilter", appName);
 
         return "silas-administration/delete-app-roles";
     }
@@ -536,20 +505,20 @@ public class AdminController {
                                     @RequestParam("appName") String appName,
                                     Model model,
                                     HttpSession session) {
-        String appNameInSession = getObjectFromHttpSession(session, S_APP_FILTER, String.class)
+        String appNameInSession = getObjectFromHttpSession(session, "appFilter", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App not selected for role ordering"));
         model.addAttribute("appName", appNameInSession);
 
-        if(!appName.equals(appNameInSession)) {
+        if (!appName.equals(appNameInSession)) {
             log.error("App name mismatch for role ID {}: expected '{}', got '{}'", roleId, appNameInSession, appName);
             model.addAttribute("errorMessage", "Error while processing app role management");
             return "errors/error-generic";
         }
 
-        session.setAttribute("ROLE_ID_FOR_DELETION", roleId);
-        session.setAttribute("ROLE_NAME_FOR_DELETION", roleName);
+        session.setAttribute("roleIdForDeletion", roleId);
+        session.setAttribute("roleNameForDeletion", roleName);
 
-        model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+        model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
         return String.format("redirect:/admin/silas-administration/delete-role/%s/reason", roleId);
     }
@@ -557,31 +526,31 @@ public class AdminController {
     @GetMapping("/silas-administration/delete-role/{roleId}/reason")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).EDIT_LAA_APP_METADATA)")
     public String showDeleteAppRoleReasonPage(@PathVariable String roleId,
-                                             HttpSession session,
-                                             Model model) {
-        String appName = getObjectFromHttpSession(session, S_APP_FILTER, String.class)
+                                              HttpSession session,
+                                              Model model) {
+        String appName = getObjectFromHttpSession(session, "appFilter", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App name not found in session"));
-        String roleIdFromSession = getObjectFromHttpSession(session, "ROLE_ID_FOR_DELETION", String.class)
+        String roleIdFromSession = getObjectFromHttpSession(session, "roleIdForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role ID not found in session"));
-        String roleName = getObjectFromHttpSession(session, "ROLE_NAME_FOR_DELETION", String.class)
+        String roleName = getObjectFromHttpSession(session, "roleNameForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role name not found in session"));
 
         try {
-            if(!roleIdFromSession.equals(roleId)) {
+            if (!roleIdFromSession.equals(roleId)) {
                 log.error("Role ID mismatch for role ID {}: expected '{}', got '{}'", roleId, roleIdFromSession, roleId);
                 model.addAttribute("errorMessage", "Error while processing app role management");
                 return "errors/error-generic";
             }
 
-            AppRoleDto appRole = appRoleService.findById(roleId). orElseThrow(() -> new RuntimeException("App Role not found"));
+            AppRoleDto appRole = appRoleService.findById(roleId).orElseThrow(() -> new RuntimeException("App Role not found"));
 
-            if(!appRole.getName().equals(roleName)) {
+            if (!appRole.getName().equals(roleName)) {
                 log.warn("Role name mismatch for role ID {}: expected '{}', got '{}'", roleId, appRole.getName(), roleName);
                 model.addAttribute("errorMessage", "Role name does not match the expected value for the selected role");
                 return "errors/error-generic";
             }
 
-            if(!appName.equals(appRole.getApp().getName())) {
+            if (!appName.equals(appRole.getApp().getName())) {
                 log.warn("App name mismatch for role ID {}: expected '{}', got '{}'", roleId, appRole.getApp().getName(), appName);
                 model.addAttribute("errorMessage", "App name does not match the expected value for the selected role");
                 return "errors/error-generic";
@@ -594,7 +563,7 @@ public class AdminController {
             model.addAttribute("appName", appName);
             model.addAttribute("roleId", roleId);
 
-            model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+            model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
             return "silas-administration/delete-app-role-reason";
 
@@ -609,19 +578,19 @@ public class AdminController {
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).DELETE_LAA_APP_ROLE)")
     public String processDeleteAppRoleReasonSubmission(@PathVariable String roleId,
                                                        @Valid DeleteAppRoleReasonForm reasonForm,
-                                          BindingResult bindingResult,
-                                          HttpSession session,
-                                          Model model) {
+                                                       BindingResult bindingResult,
+                                                       HttpSession session,
+                                                       Model model) {
 
         if (bindingResult.hasFieldErrors("reason")) {
             return "silas-administration/delete-app-role-reason";
         }
 
-        String appName = getObjectFromHttpSession(session, S_APP_FILTER, String.class)
+        String appName = getObjectFromHttpSession(session, "appFilter", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App name not found in session"));
-        String roleIdFromSession = getObjectFromHttpSession(session, "ROLE_ID_FOR_DELETION", String.class)
+        String roleIdFromSession = getObjectFromHttpSession(session, "roleIdForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role ID not found in session"));
-        String roleName = getObjectFromHttpSession(session, "ROLE_NAME_FOR_DELETION", String.class)
+        String roleName = getObjectFromHttpSession(session, "roleNameForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role name not found in session"));
 
         AppRoleDto appRole = appRoleService.findById(roleIdFromSession).orElseThrow(() -> new RuntimeException("App Role not found"));
@@ -658,13 +627,13 @@ public class AdminController {
     @GetMapping("/silas-administration/delete-role/{roleId}/check-answers")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).DELETE_LAA_APP_ROLE)")
     public String showDeleteAppRoleCheckAnswersPage(@PathVariable String roleId,
-                                              HttpSession session,
-                                              Model model) {
-        String appName = getObjectFromHttpSession(session, S_APP_FILTER, String.class)
+                                                    HttpSession session,
+                                                    Model model) {
+        String appName = getObjectFromHttpSession(session, "appFilter", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App name not found in session"));
-        String roleIdFromSession = getObjectFromHttpSession(session, "ROLE_ID_FOR_DELETION", String.class)
+        String roleIdFromSession = getObjectFromHttpSession(session, "roleIdForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role ID not found in session"));
-        String roleName = getObjectFromHttpSession(session, "ROLE_NAME_FOR_DELETION", String.class)
+        String roleName = getObjectFromHttpSession(session, "roleNameForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role name not found in session"));
 
         try {
@@ -672,7 +641,7 @@ public class AdminController {
                     DeleteAppRoleReasonForm.class).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
                     "Delete Role form not found in session"));
 
-            if(!roleIdFromSession.equals(roleId) || !reasonForm.getAppRoleId().equals(roleId)) {
+            if (!roleIdFromSession.equals(roleId) || !reasonForm.getAppRoleId().equals(roleId)) {
                 log.error("Role ID mismatch for role ID {}: expected '{}', got '{}'", roleId, roleIdFromSession, roleId);
                 model.addAttribute("errorMessage", "Error while processing app role management");
                 return "errors/error-generic";
@@ -685,7 +654,7 @@ public class AdminController {
             model.addAttribute("noOfUserProfilesAffected", appRoleService.countNoOfRoleAssignments(roleId));
             model.addAttribute("noOfFirmsAffected", appRoleService.countNoOfFirmsWithRoleAssignments(roleId));
 
-            model.addAttribute(ModelAttributes.PAGE_TITLE, "SiLAS Administration");
+            model.addAttribute(ModelAttributes.PAGE_TITLE, SILAS_ADMINISTRATION_TITLE);
 
             return "silas-administration/delete-app-role-check-answers";
 
@@ -699,14 +668,14 @@ public class AdminController {
     @PostMapping("/silas-administration/delete-role/{roleId}/check-answers")
     @PreAuthorize("@accessControlService.authenticatedUserHasPermission(T(uk.gov.justice.laa.portal.landingpage.entity.Permission).DELETE_LAA_APP_ROLE)")
     public String submitDeleteAppRoleCheckAnswersPage(@PathVariable String roleId,
-                                                    HttpSession session,
-                                                    Model model,
-                                                    Authentication authentication) {
-        String appName = getObjectFromHttpSession(session, S_APP_FILTER, String.class)
+                                                      HttpSession session,
+                                                      Model model,
+                                                      Authentication authentication) {
+        String appName = getObjectFromHttpSession(session, "appFilter", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App name not found in session"));
-        String roleIdFromSession = getObjectFromHttpSession(session, "ROLE_ID_FOR_DELETION", String.class)
+        String roleIdFromSession = getObjectFromHttpSession(session, "roleIdForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role ID not found in session"));
-        String roleName = getObjectFromHttpSession(session, "ROLE_NAME_FOR_DELETION", String.class)
+        String roleName = getObjectFromHttpSession(session, "roleNameForDeletion", String.class)
                 .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Role name not found in session"));
 
         AppRoleDto appRole = appRoleService.findById(roleIdFromSession).orElseThrow(() -> new RuntimeException("App Role not found"));
@@ -727,7 +696,7 @@ public class AdminController {
                 DeleteAppRoleReasonForm.class).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND,
                 "Delete Role form not found in session"));
 
-        if(!roleIdFromSession.equals(roleId) || !reasonForm.getAppRoleId().equals(roleId)) {
+        if (!roleIdFromSession.equals(roleId) || !reasonForm.getAppRoleId().equals(roleId)) {
             log.error("Role ID mismatch for role ID {}: expected '{}', got '{}'", roleId, roleIdFromSession, roleId);
             model.addAttribute("errorMessage", "Error while processing app role management");
             return "errors/error-generic";
@@ -735,23 +704,15 @@ public class AdminController {
 
         UUID entraOid = loginService.getCurrentUser(authentication).getUserId();
         UUID userProfileId = loginService.getCurrentProfile(authentication).getId();
-        appRoleService.deleteAppRole(userProfileId, entraOid, appName, reasonForm.getReason(), roleIdFromSession);
+        appRoleService.deleteAppRole(userProfileId, entraOid, appName, roleIdFromSession, reasonForm.getReason());
 
 
-        return "redirect:/admin/silas-administration/delete-role-confirmation";
+        return "silas-administration/delete-app-roles-confirmation";
     }
 
     @GetMapping("/silas-administration/cancel/{tab}")
     public String cancel(HttpSession session, @PathVariable String tab) {
-        session.removeAttribute(S_APP_DETAILS_FORM);
-        session.removeAttribute(S_APP_DETAILS_FORM_MODEL);
-        session.removeAttribute(S_APP_ID);
-        session.removeAttribute(S_APP_ROLE_DETAILS_FORM);
-        session.removeAttribute(S_APP_ROLE_DETAILS_FORM_MODEL);
-        session.removeAttribute(S_APPS_ORDER_FORM);
-        session.removeAttribute(S_APP_FILTER);
-        session.removeAttribute(S_ROLE_ID);
-        session.removeAttribute(S_APP_ROLES_ORDER_FORM);
+        clearSessionAttributes(session);
 
         if (!VALID_TABS.contains(tab)) {
             tab = "admin-apps";
@@ -760,20 +721,30 @@ public class AdminController {
         return "redirect:/admin/silas-administration#" + tab;
     }
 
-    private static String buildErrorString(BindingResult result) {
-        StringBuilder errorMessage = new StringBuilder();
-        List<ObjectError> errors = result.getAllErrors();
-        for (int i = 0; i < errors.size(); i++) {
-            ObjectError error = errors.get(i);
-            errorMessage.append(error.getDefaultMessage());
-            if (i < errors.size() - 1) {
-                errorMessage.append("<br/>");
-            }
-        }
-        return errorMessage.toString();
+    private void clearSessionAttributes(HttpSession session) {
+        List.of("appDetailsForm", "appDetailsFormModel", "appId", "appsOrderForm", "deleteAppRoleReasonForm",
+                        "appRoleDetailsForm", "appRoleDetailsFormModel", "appFilter", "roleId", "appRolesOrderForm",
+                        "roleIdForDeletion", "roleNameForDeletion")
+                .forEach(session::removeAttribute);
     }
 
-    // helper methods
+    private String buildErrorString(BindingResult result) {
+        return result.getAllErrors().stream()
+                .map(ObjectError::getDefaultMessage)
+                .collect(Collectors.joining("<br/>"));
+    }
+
+    private AppDto findAppDtoOrThrow(String appId) {
+        UUID uuid = parseUuid(appId, "appId");
+        return appService.findById(uuid)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App details not found"));
+    }
+
+    private AppRoleDto findAppRoleDtoOrThrow(String roleId) {
+        UUID uuid = parseUuid(roleId, "roleId");
+        return appRoleService.findById(uuid).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App role details not found"));
+    }
+
     private UUID parseUuid(String id, String paramName) {
         try {
             return UUID.fromString(id);
@@ -781,16 +752,6 @@ public class AdminController {
             log.warn("Invalid UUID for {}: {}", paramName, id);
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, paramName + " is invalid");
         }
-    }
-
-    private AppDto findAppDtoOrThrow(String appId) {
-        UUID uuid = parseUuid(appId, "appId");
-        return appService.findById(uuid).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App details not found"));
-    }
-
-    private AppRoleDto findAppRoleDtoOrThrow(String roleId) {
-        UUID uuid = parseUuid(roleId, "roleId");
-        return appRoleService.findById(uuid).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "App role details not found"));
     }
 
 }
